// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvbFlyout should create 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": null,
      "$text$": "",
    },
  ],
  "$elm$": null,
  "$flags$": 0,
  "$key$": null,
  "$name$": null,
  "$tag$": Object {},
  "$text$": null,
}
`;

exports[`EvbFlyout should not render host class when openend 1`] = `
Object {
  "$attrs$": Object {
    "class": "",
  },
  "$children$": Array [
    Object {
      "$attrs$": null,
      "$children$": null,
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": null,
      "$text$": "",
    },
  ],
  "$elm$": null,
  "$flags$": 0,
  "$key$": null,
  "$name$": null,
  "$tag$": Object {},
  "$text$": null,
}
`;

exports[`EvbFlyout should render host class when openend 1`] = `
Object {
  "$attrs$": Object {
    "class": "flyout--open",
  },
  "$children$": Array [
    Object {
      "$attrs$": Object {
        "class": "flyout",
      },
      "$children$": Array [
        Object {
          "$attrs$": null,
          "$children$": Array [
            Object {
              "$attrs$": Object {
                "heading": "3",
              },
              "$children$": null,
              "$elm$": null,
              "$flags$": 0,
              "$key$": null,
              "$name$": null,
              "$tag$": "evb-header",
              "$text$": null,
            },
            Object {
              "$attrs$": Object {
                "class": "close",
                "onClick": [Function],
              },
              "$children$": Array [
                Object {
                  "$attrs$": null,
                  "$children$": null,
                  "$elm$": null,
                  "$flags$": 0,
                  "$key$": null,
                  "$name$": null,
                  "$tag$": null,
                  "$text$": "×",
                },
              ],
              "$elm$": null,
              "$flags$": 0,
              "$key$": null,
              "$name$": null,
              "$tag$": "button",
              "$text$": null,
            },
          ],
          "$elm$": null,
          "$flags$": 0,
          "$key$": null,
          "$name$": null,
          "$tag$": "header",
          "$text$": null,
        },
        Object {
          "$attrs$": null,
          "$children$": null,
          "$elm$": null,
          "$flags$": 0,
          "$key$": null,
          "$name$": null,
          "$tag$": "slot",
          "$text$": null,
        },
      ],
      "$elm$": null,
      "$flags$": 0,
      "$key$": null,
      "$name$": null,
      "$tag$": "aside",
      "$text$": null,
    },
  ],
  "$elm$": null,
  "$flags$": 0,
  "$key$": null,
  "$name$": null,
  "$tag$": Object {},
  "$text$": null,
}
`;
